--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -12,8 +12,8 @@
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
-          <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Distributed by <a href="https://www.themewagon.com/" target="_blank">Riffar</a></span> 
+          <div class="d-sm-flex justify-content-center justify-content-sm-between ">
+          <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Karya anak bangsa<a href="https://www.themewagon.com/" target="_blank"> Dua penyuka adidas</a></span> 
           </div>
         </footer> 
         <!-- partial -->
